--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,11 @@ body {
 	border: 2px solid #fff;
 }
 
+.well {
+	background-color: #000;
+	color: #fff;	
+}
+
 .btn {
 	background-color: #000;
 	color: #fff;
